[tool.poetry]
name = "sdk_development"
version = "0.1.0"
description = ""
authors = ["Nikolaus Naredi-Rainer <nikolaus.naredi-rainer@zuehlke.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.25.1"
websockets = "^11.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-mock = "^3.11.1"
pylint = "^2.17.5"
black = "^23.7.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

### TOOLS CONFIG ###
[tool.pylint.main]
load-plugins="my_pylint_extension"
ignore = "generated_code,docs"
good-names= [
        "i",
        "j",
        "ex",
        "e",
        "oe"
]

[tool.pylint.messages_control]
disable = [
        "duplicate-code",
        "line-too-long",
        "too-few-public-methods",
        "missing-class-docstring",
        "missing-module-docstring",
        "missing-function-docstring",
        "too-many-instance-attributes",
        "too-many-arguments",
        "too-many-public-methods",
        "too-many-lines",
        "W0511",  # ignores the strange "T o D o" errors from pylint
        "E0401",
        "bad-plugin-value",
        "W0012",
        "wrong-import-order",
        "no-name-in-module",
        "W0107"
]
[tool.pylint.typecheck]
ignored-classes = "cx_Oracle"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["generated_code", "venv", "site-packages", "tests"]
show_error_codes = true
disable_error_code = ["misc", "empty-body", "attr-defined"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = "union-attr"

[[tool.mypy.overrides]]
module = ["my.components.generated_code.*"]
ignore_errors = true